# digital-interventions-review-analysis

./: ADHD_google_store_originalpaper.ipynb  Paper_google_play_apps_ADHD.md  README.md  adhd_apps_with_reviews.csv  alive_apps.csv  analyze_reviews.py  analyzed_reviews.json  app.py  google_paper_adhd.csv  pre_existing_script.ipynb  py_google_play_instruction.md  pyproject.toml  reviews.json  scrape_reviews.py  survivorship_analysis.ipynb  survivorship_test.md  test.md
App-Store/: AppStoreFilter.ipynb  adhd_filtered_apps.csv  adhd_matched_apps.csv  app_reviews.csv  py_app_store_instruction.md
templates/: index.html
