[project]
name = "digital-interventions-review-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Focus Bear"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "app-store-web-scraper (>=0.2.0,<0.3.0)",
    "openai (>=1.88.0,<2.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "lingua-language-detector (>=2.1.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
